🐝 fix: better alignment for back button

--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -1,3 +1,5 @@
+@require 'settings/palette'
+
 .PopupSelect__content
     margin-left -1.5em
     width calc(100% + 3em)
@@ -15,6 +17,8 @@
     &:last-child
         border-bottom 0
 
-.buttonIcon
-    padding-right .5rem
+.PopupSelect__back
     cursor pointer
+    margin-right 1.25rem
+    margin-left -0.25rem
+    font-size 1.5rem
